Lernen für die Bio-Abivorklausur

--- a/Biologie/Abiturvorbereitung/20.02.2014 - Lernstoff für die Vorabiklausur.md
+++ b/Biologie/Abiturvorbereitung/20.02.2014 - Lernstoff für die Vorabiklausur.md
@@ -1,5 +1,5 @@
-Ökologie: Fachtermini und Regeln
-================================
+Ökologie
+========
 
 Fachtermini:
 ------------
@@ -62,4 +62,77 @@ Lotka-Volterra-Regeln:
 3.  Wenn die Räuber- und Beutepopulation gleichermaßen dezimiert wird,
     dann vergrößert sich die Beutepopulation und es kommt zu einer
     Dezimierung der Räuberpopulation.
+
+Lebensgemeinschaften:
+---------------------
+
+**In Ökosystemen gibt es meist die folgenden Nahrungsstufen
+(Trophieebenen):**
+
+Produzenten → Primärkonsumenten → Sekundärkonsumenten →
+Tertiärkonsumenten (etc.)
+
+Meistens gibt es keine linearen Nahrungsketten sondern komplexe
+Nahrungsnetze. Zwischen den einzelnen Trophieebenen wechseln die Werte
+der Individuen-Anzahl, Biomasse, Anzahl, Energieproduktion. Dies ist in
+dem jeweiligen Ökosystem angepaßt und individuell zu betrachten.
+
+Ökosystem See
+-------------
+
+### Zonierung:
+
+-   **Freiwasserzone (Pelagial):** Das Licht teilt das Pelagial in
+    verschiedene Nährschichten (trophogene Zonen)
+    -   Litoral (Viel Lichteinfall)
+    -   Benthal (Mäßiger Lichteinfall)
+    -   Profundal (Wenig bis gar kein Lichteinfall)
+-   **Bodengrund (Benthal)**
+
+### Oligotrophie und Eutrophie:
+
+-   **Oligotrophie:**
+    -   Fotosynthese Prozesse überwiegen
+    -   Hoher O~2~-Gehalt
+    -   Geringer CO~2~-Gehalt
+    -   Geringer Nährstoff-Gehalt
+    -   Sehr wenig Pflanzen und Phytoplankton
+-   **Eutrophie:**
+    -   Hoher Nährstoffgehalt → Mehr Konsumenten (und Destruenten)
+    -   In der tropholytischen Zone gehen die aeroben Abbauvorgänge
+        zurück (im Vergleich zu den anaeroben Abbauprozessen)
+    -   Mächtige Deckschicht
+    -   Am Seegrund: Viel organisches Material + Ammonium Bildung
+    -   Viele Pflanzen und Phytoplankton
+
+Stickstoffkreislauf
+-------------------
+
+-   N~2~ kann in molekularer Form von den meisten Lebewesen nicht
+    aufgenommen werden → Stickstoff wird durch die Nahrung meist als
+    Aminogruppen aufgenommen (-NH~2~)
+-   Durch **Ausscheidungen** und **abgestorbene Pflanzen- und
+    Tierreste** gelangen Destruenten an die Aminogruppen und
+    mineralisieren diese mittels der **Ammonifikation** zu
+    Ammonium-Ionen (NH~4+~)
+-   **Mikroorganismen oxidieren** die Ammonium-Ionen (NH~4+~) über
+    Nitrit-(N0~2-~) zu **Nitrationen(NO~3-~)** oder Pflanzen nehmen die
+    Ammonium-Ionen direkt auf.
+-   Durch den Vorgang der Oxidation durch die Mikroorganismen **gewinnen
+    nitrifizierende Bakterien an Energie** welche es ihnen ermöglicht
+    eine Chemosynthese durchzuführen → Kohlenstoff wird in die
+    organische Substanz eigebunden (es wird kein Sonnenlicht benötigt)
+-   Denitrifikation (Mittels Sauerstoff wird aus den Nitraten und
+    Nitriten gasförmiger Stickstoff)
+
+Evolution der Arten
+===================
+
+Fachtermini
+-----------
+
+-   **Population**: Gruppe von artgleichen Individuen, welche eine
+    Fortpflanzungsgemeinschaft (→ gemeinsamer Genpool) bilden. Die
+    einzelnen Individuen unterscheiden sich in Geno- und Phenotyp
+
 
