Bio: Vorbereitung auf die Vorabiklausur

--- a/Biologie/Abiturvorbereitung/20.02.2014 - Lernstoff für die Vorabiklausur.md
+++ b/Biologie/Abiturvorbereitung/20.02.2014 - Lernstoff für die Vorabiklausur.md
@@ -131,8 +131,21 @@ Evolution der Arten
 Fachtermini
 -----------
 
--   **Population**: Gruppe von artgleichen Individuen, welche eine
+-   **Population:** Gruppe von artgleichen Individuen, welche eine
     Fortpflanzungsgemeinschaft (→ gemeinsamer Genpool) bilden. Die
-    einzelnen Individuen unterscheiden sich in Geno- und Phenotyp
-
+    einzelnen Individuen unterscheiden sich in Geno- und Phänotyp
+-   **Endemiten:** Tierart, welche nur auf einem kleinen Gebiet auf der
+    Erde lebt
+-   **Selektion:** Durch Auslese wird die Allelfrequenz im Genpool
+    verändert. Künstliche Selektion = Züchtung. Natürliche Selektion =
+    Einfluss von biotischen und abiotischen Einflüssen.
+-   **Rekombination:** Durch sexuelle Rekombination wird die
+    Variabilität verändert. Die Allelfrequenz bleibt im Vergleich zur
+    Selektion allerdings bestehen.
+-   **Gendrift:** Evolutionsfaktor, welcher eine zufallsbedingte
+    Änderung eines Genpools (bzw. Allelfrequenz) bewirkt.
+-   **Migration:** Veränderung des Genpools, welche durch Zu- bzw.
+    Abwanderung von Individuen der selben Art ensteht.
+-   **Divergenz:** Unterschiedliche evolutive Entwicklungen, begründet
+    durch eine unterschiedliche geographische Lage.
 
